SIPX-664: Decrease docker image size